Shortcut Transition Addition

--- a/a1-homepage.html
+++ b/a1-homepage.html
@@ -12,7 +12,13 @@
         <div class="screenWrap">
             <div id="homescreen" class="screen">
                 <h1><img src="Images/headertext/picturetopeople.org-ca3f14bf25253eb3abdae2575b2ff804c82a0ce8bdbd32bc2a.png" alt="Homepage" class="header"></h1>
-                
+
+                <div class="shortcut" id="contacts">
+                    <img  src="Images/topLeftIcons/ContactsFolder.png" alt="Icon for Contacts">
+                    <br>
+                    <p class="shortcutText">Contacts</p>
+                </div>
+
             </div>
         </div>
 
